spellcheck; figure1 now a png

--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -117,7 +117,7 @@ our implementation.
 We hope that future work in 3-D feature detections, description,
 or subsequent recognition or pose estimation mechanisms will benefit
 from this framework.
-The project of a general, modular 3-D preception evaluation framework is
+The project of a general, modular 3-D perception evaluation framework is
 tremendous, and would benefit from code and testing contributions as much as its
 existence benefits researchers in these areas.
 
