--- a/writeups/icra12/architecture.tex
+++ b/writeups/icra12/architecture.tex
@@ -48,7 +48,7 @@ A screenshot of the visualization provided by the stock detector is provided in 
 \end{figure}
 
 The vote totals are output as the estimated likeness ratings.
-The registered distance from the four top canidates are returned as the estimated euclidean distances.
+The registered distance from the four top candidates are returned as the estimated euclidean distances.
 Finally, the model that registers most closely with the scene is selected as the detected model.
 
 \subsubsection{Stock Variants}
